# Naive-CPU-Simulator

./: CMakeLists.txt  main.cpp
include/: Executor.h  InputManager.h  Instruction.h  Memory.h  Register.h
src/: Instruction.cpp
utility/: InputManager.h  utility.h
